*2.1.0* October 14, 2007

* Default to 0664 instead of 0660 on upload [Jamis Buck]

* Fix deploy:pending to query SCM for the subsequent revision so that it does not include the last deployed change [Jamis Buck]

* Prefer 'Last Changed Rev' over 'Revision' when querying latest revision via Subversion [Jamis Buck]

* Explicitly require 'stringio' in copy_test [mislav]

* When Subversion#query_revision fails, give a more sane error [Jamis Buck]

* Don't run the upgrade:revisions task on non-release servers [Jamis Buck]

* Fix cap shell to properly recognize sudo prompt [Mark Imbriaco, barnaby, Jamis Buck]

* Git SCM module [Garry Dolley, Geoffrey Grosenbach, Scott Chacon]

* Use the --password switch for subversion by default, but add :scm_prefer_prompt variable (defaults to false) [Jamis Buck]


*2.0.100 (2.1 Preview 1)* September 1, 2007

* capify-generated Capfile will autoload all recipes from vendor/plugins/*/recipes/*.rb [Graeme Mathieson]

* Use sudo -p switch to set sudo password prompt to something predictable [Mike Bailey]

* Allow independent configurations to require the same recipe file [Jamis Buck]

* Set :shell to false to run a command without wrapping it in "sh -c" [Jamis Buck]

* Don't request a pty by default [Jamis Buck]

* Add a "match" remote dependency method [Adam Greene]

* Allow auth-caching of subversion credentials to be enabled via :scm_auth_cache [tsmith]

* Don't let a task trigger itself when used as the source for an "on" hook [Jamis Buck]

* Avoid using the --password switch with subversion for security purposes [sentinel]

* Add version_dir, current_dir, and shared_dir variables for naming the directories used in deployment [drinkingbird]

* Use Windows-safe binary reads for reading file contents [Ladislav Martincik]

* Add Accurev SCM support [Doug Barth]

* Use the :runner variable to determine who to sudo as for deploy:restart [Graham Ashton]

* Add Namespaces#top to always return a reference to the topmost namespace [Jamis Buck]